# axum-examples-integration

./: Cargo.toml  README.md  diesel.toml
assets/: index.html  script.js
doc/: req.http
src/: lib.rs  main.rs  req.http
src/comm/: mod.rs  reqwest_req.rs  valid.rs
src/dbdiesel/: diesel_.rs  mod.rs  model.rs  schema.rs
src/dbsqlx/: mod.rs  sqlx_.rs
src/metrics/: mod.rs
src/notifications/: mod.rs  sse.rs  types.rs  websockets.rs  ws.rs
src/org/: company.rs  dept.rs  mod.rs
src/rudis/: mod.rs  rudis.rs
src/user/: mod.rs  role.rs  user.rs
